# skore

./: .env.example  .gitignore  .vercelignore  DECISIONS.md  README.md  pyproject.toml  requirements.txt  vercel.json
.claude/: launch.json
api/: auth.py  db.py  index.py  main.py  profiles.py  serialize.py  storage.py  store.py  users.py
samples/: demo.igc  demo.xctsk  field_p1.igc  field_p2.igc  field_p3.igc  field_p4.igc
samples/golden/: 2026-06-28 남부리그 5차전 2라운드.html  ParkJintaek.igc  SonSungHoon.igc  SongDaejin.igc  task.xctsk
scoring/: __init__.py  gap.py  geo.py  igc.py  localtime.py  models.py  optimize.py  params.py  result.py  task.py  validate.py  validity.py
scoring/tests/: test_golden.py  test_igc.py  test_landing.py  test_localtime.py  test_optimize.py  test_scoring.py  test_task.py  test_validate.py
scripts/: repro_nambu4.py
supabase/migrations/: 0001_init.sql  0002_account_approval.sql  0003_glider_brand.sql
web/: admin.html  admin.js  app.js  auth.js  comp.html  comp.js  config.js  dashboard.html  dashboard.js  index.html  landing.html  login.html  roster.html  roster.js  signup.html  style.css
