[project]
name = "paragliding-scoring"
version = "0.1.0"
description = "FAI/CIVL GAP XC paragliding competition scoring engine (clean-room) + API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "paragliding-scoring contributors" }]
dependencies = [
    "geographiclib>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scoring", "api"]

[tool.pytest.ini_options]
testpaths = ["scoring/tests", "api/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
